@startuml

title __FINALPROJECT's Class Diagram__\n

  namespace com.example.finalproject {
    class com.example.finalproject.DesktopWidget {
        + onDisabled()
        + onEnabled()
        + onUpdate()
    }
  }
  

  namespace com.example.finalproject {
    class com.example.finalproject.MainActivity {
        ~ idNum : String
        ~ nextTime : long
        ~ prevTime : long
        ~ timeLeft : int
        ~ validTime : int
        + autoRefresh()
        + readFile()
        + refreshDisp()
        # onCreate()
        # onStart()
        - createNotificationChannel()
    }
  }
  

  namespace com.example.finalproject {
    class com.example.finalproject.setting {
        + readFile()
        # onCreate()
        - checkNeedPermissions()
    }
  }
  

  com.example.finalproject.DesktopWidget -up-|> android.appwidget.AppWidgetProvider
  com.example.finalproject.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalproject.setting -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
